fix(aw-tel): update styles for dark mode

--- a/packages/ui/assets/css/components/text-field.css
+++ b/packages/ui/assets/css/components/text-field.css
@@ -69,12 +69,12 @@
 
             &:hover,
             &.open {
-                background-color: theme('colors.muted-dark');
+                @apply bg-muted-dark;
             }
         }
 
         .vti__dropdown-list {
-            @apply shadow-lg;
+            @apply shadow-lg bg-surface;
             max-width: 100%;
             max-height: 147px; /* include 53px of footer height */
             border: none;
@@ -107,7 +107,7 @@
             &:hover,
             &:focus {
                 outline: none;
-                background-color: theme('colors.muted-dark');
+                @apply bg-muted-dark;
             }
         }
     }
